tests/a/tests/provenance/fail/let/let.1.rs
#![allow(unused_variables)]
#![allow(unused_assignments)]

fn main() {
    #[cnbt::provenance((bin,b))]
    let w = 5;
}